fixed the seach bar wrapping round to a new line on firefoxin labs

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -200,7 +200,7 @@ header li.selected {
 	border: 0;
 }
 #search input[type=search] {
-	width: 448px;
+	width: 447px;
 }
 #search .arrow {
 	border: 10px solid transparent;
